# constellation_design

./: .copier-answers.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pdm_build.py  pyproject.toml
c_version/: Makefile  constants.hpp  main.cpp  optim_fn.cpp  optim_fn.h  reference.py  satellite.cpp  satellite.hpp  simulate.cpp  simulate.hpp  tests.cpp  utils.cpp  utils.hpp
src/: optim_fn.cpp  satellite.cpp  simulate.cpp  utils.cpp
src/constellation_design/: WalkerConstellation.py  __init__.py  compute.py  ex_compute.py  satellite.py  simulate.py  simulation.py
tests/: coverage.conf  simulate.py  test_extension.py  test_sim.py
